--- a/about.html
+++ b/about.html
@@ -1,7 +1,30 @@
-<h1>Our Roots</h1>
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="locations.html">Our Locations</a>
-<a href="Menu.html">Menu</a>
-<a href="contact.html">Contact</a>
-<p>We're an eco-friendly restaurant because we care about supporting the health of our planet. From packaging to products, we celebrate plant-based living as the number one collective action we can take to care for our earth.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+        <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="stylesheet.css">
+        
+        
+        <p class="headerTwo">Our Roots</p>
+
+    <img id="logo" src="logo/fruitivelogo.png"> 
+
+    <ul id="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="locations.html">Our Locations</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+
+    <h2 class="h2headerAlign">Our Roots</h2>
+    <iframe width="100%" height="550" src="https://player.vimeo.com/video/443252887" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+    <p id="aboutParagraph">Fruitive began when Gregg Rozeboom had the idea to create a place where his family could come and everything from the food to the ambiance and customer service would be genuine and authentic. From day one, the company has embraced that vision and strived to treat others the way its team members would want to be treated. It is about more than just food for us, it is about meeting you where you are on your health journey and encouraging you to #LiveYourHealth and #LiveYourValues. </p>
+</body>
+</html>
