--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-<a href="index.html">Home</a>
-<a href="about.html">About</a>
-<a href="locations.html">Our Locations</a>
-<a href="Menu.html">Menu</a>
-<a href="contact.html">Contact</a>
-    <form>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheet.css">
+    <p class="headerTwo">Contact</p>
+    <ul id="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="locations.html">Our Locations</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul> 
+    <img id="logo" src="logo/fruitivelogo.png"> 
+    
+    <div class = contactBox>
+    <h1 class="formHeader">Contact Form</h1>
+    <form class="formBox">
         <input type="text" name="firstName" placeholder="First Name"><br/>
         <input type="text" name="lastName" placeholder="Last Name"><br/>
         <input type="text" name="phoneNumber" placeholder="Phone Number"><br/>
         <input type ="submit" value="Submit">
     </form>
+    </div>
+    <p class = "formFooter">we will be in touch very soon!</p>
+</div>
 </body>
 </html>
