--- a/menu.html
+++ b/menu.html
@@ -7,14 +7,21 @@
     <title>Document</title>
 </head>
 <body>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheet.css">
     
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="locations.html">Our Locations</a>
-    <a href="Menu.html">Menu</a>
-    <a href="contact.html">Contact</a>
+    <p class="headerTwo">Menu</p>
+    
+    <ul id="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="locations.html">Our Locations</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <img id="logo" src="logo/fruitivelogo.png"> 
     <br/>
-    <img src="https://images.squarespace-cdn.com/content/v1/58ab3b4ad2b8579b70cfb83b/222e6c12-ba17-4f5c-bfc3-0a3e07f6774e/web+menu.png?format=2500w" height = 1400>
+    <img id="menu" src="https://images.squarespace-cdn.com/content/v1/58ab3b4ad2b8579b70cfb83b/222e6c12-ba17-4f5c-bfc3-0a3e07f6774e/web+menu.png?format=2500w" >
 
 </body>
 </html>
