--- a/index.html
+++ b/index.html
@@ -4,24 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fruitive</title>
 </head>
 <body>
-    <script src="script.js"></script>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="locations.html">Our Locations</a>
-    <a href="Menu.html">Menu</a>
-    <a href="contact.html">Contact</a>
-    <h1>Fruitive </h1>
-    <p>Your health and happiness are what matter to us. Fruitive’s core motto
-         is “Live Your Health”. We hope to help you achieve this by providing
+    <script src="fruitive.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheet.css">
+    <p class="headerTwo">Home</p>
+    
+    <ul id="navbar">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="locations.html">Our Locations</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+
+    <img id="logo" src="logo/fruitivelogo.png"> 
+    <p id =indexParagraph>Your health and happiness are what matter to us. Fruitive’s core motto
+        is “Live Your Health”. We hope to help you achieve this by providing
           you with a fully plant-based menu. All Fruitive items are comprised
            of plant-based ingredients such as fruits, veggies, whole grains, 
            legumes, nuts, seeds, herbs, and spices. No matter where you are on 
            your health journey, our wholesome ingredients support taking you to 
-           the next level.</p>
-    <h4>PLANT-BASED. SIMPLE. BEAUTIFUL. </h4>
-    <img src="https://images.squarespace-cdn.com/content/v1/58ab3b4ad2b8579b70cfb83b/1576528133747-745CQRZMBEIFKNF1ZZNJ/organic+fruitive+menu.jpg" height = 500>
-</body>
+           the next level.
+        </p> 
+    <div class="plantBasedBox">
+    <h1 class = h1headerAlign>PLANT-BASED. SIMPLE. BEAUTIFUL.</h1>
+    </div>
+
+     <img id="acai" src="https://images.squarespace-cdn.com/content/v1/58ab3b4ad2b8579b70cfb83b/1576528133747-745CQRZMBEIFKNF1ZZNJ/organic+fruitive+menu.jpg">
+     <div>
+        <img id="juice" src="pictures/-ocg1G9o.jpg">
+        <img id="juice" src="pictures/BDTCT0Mg.jpg">
+        <img id="juice" src="pictures/hmKzkiV4.jpg">
+    </div>   
+    </body>
 </html>
